# CBreakout

./: .gitignore  CMakeLists.txt  GLOB  LICENSE  README.md
res/: LICENSE  cloud.xcf  sheet.xcf  title.xcf
src/: CApp.cpp  CApp.h  CBreakoutConfig.h  CBreakoutConfig.h.in  CDisplayContainer.cpp  CDisplayContainer.h  CDisplayObject.cpp  CDisplayObject.h  CGraphics.cpp  CGraphics.h  CScene.cpp  CScene.h  CSprite.cpp  CSprite.h  CStage.cpp  CStage.h  CTexture.cpp  CTexture.h  Utils.cpp  Utils.h  main.cpp
src/game/: CAngryBrick.cpp  CAngryBrick.h  CBall.cpp  CBall.h  CBreakEffect.cpp  CBreakEffect.h  CBrick.cpp  CBrick.h  CCharacter.cpp  CCharacter.h  CCloud.cpp  CCloud.h  CCloudContainer.cpp  CCloudContainer.h  CGameScene.cpp  CGameScene.h  CHPDisp.cpp  CHPDisp.h  CHardBrick.cpp  CHardBrick.h  CItem.cpp  CItem.h  CPaddle.cpp  CPaddle.h  CScoreDisp.cpp  CScoreDisp.h  CScoreScene.cpp  CScoreScene.h  CTitleScene.cpp  CTitleScene.h  CVelocitySprite.cpp  CVelocitySprite.h  ICollidable.h
